Fix all spacing and unfinished tags

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -12,10 +12,11 @@
     <h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
 
     <nav id="navigation">
-      <!--Hint: Match navigation labels with memorable paths/URLs-->
-      <li><a href="home.html">Home</a></li>
-      <li><a href="../my-res/">Resume</a></li>
-      <li><a href="randomstuff/">Interests</a></li>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="../my-res/">Resume</a></li>
+        <li><a href="randomstuff/">Interests</a></li>
+      </ul>
     </nav>
   </header>
   <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
@@ -30,15 +31,15 @@
       </p>
     </article>
     <!--Hint: Watch formatting, spacing, and tag completeness-->
-    <article id="my dog"
+    <article id="my dog">
       <div class="header">Look at this awesome dog!</div>
         <figure>
           <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
             <figcaption>
               Hank hanging out on the couch & being chill.
-              </figcaption>
-                </figrue>
-              </article>
+            </figcaption>
+        </figure>
+    </article>
     <aside id="supporting">
     <p><h2>Facts About Me</h2></p>
     <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
