Fix navigation list

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
   </header>
-  <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
+  <!--Hint: Watch for duplicate and non-semantic classes and IDs--->
   <main id="content">
     <article id="primary" class="green-background">
       <h2><b>About Me</b></h2>
