Fix article tag id, img tag src, remove extra li

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
   </header>
-  <!--Hint: Watch for duplicate and non-semantic classes and IDs--->
+  <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
   <main id="content">
     <article id="primary" class="green-background">
       <h2><b>About Me</b></h2>
@@ -31,10 +31,10 @@
       </p>
     </article>
     <!--Hint: Watch formatting, spacing, and tag completeness-->
-    <article id="my dog">
-      <div class="header">Look at this awesome dog!</div>
+    <article id="mydog">
+      <h2 class="header">Look at this awesome dog!</h2>
         <figure>
-          <img href="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
+          <img src="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
             <figcaption>
               Hank hanging out on the couch & being chill.
             </figcaption>
@@ -48,7 +48,7 @@
         <!-- Hint: Close up spaces between content and HTML tags on the same line-->
         <li class="quick-facts"> Interested in cybersecurity </li>
           <li class="quick-facts"> Hate cold winters </li>
-<li class="quick-facts" > Always running late </li></li>
+<li class="quick-facts" > Always running late </li>
       </ul>
     </aside>
   </main>
