--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -43,17 +43,10 @@
     <aside id="supporting">
     <p><h2>Facts About Me</h2></p>
     <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
-    <ul>
-      <li class="quick-facts"><p><b> Quick Facts: </b></p>
-        <!-- Hint: Close up spaces between content and HTML tags on the same line-->
-        <li class="quick-facts"> Interested in cybersecurity </li>
-          <li class="quick-facts"> Hate cold winters </li>
-<li class="quick-facts" > Always running late </li>
-      </ul>
-    </aside>
-  </main>
-  <footer id="footer">
-    Site content and design &copy; by me.
-  </footer>
-</body>
+    <ul class="quick-facts">
+          <li><p><b> Quick Facts:</b></p>
+          <li>Interested in cybersecurity</li>
+          <li>Hate cold winters</li>
+          <li>Always running late</li>
+    </ul>
 </html>
