--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -6,11 +6,11 @@
   <!--Hint: Don't add extra space around `=` signs in attribute-value pairs-->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=devicewidth,initialscale=1.0,shrink-to-fit=none" />
-  <link rel="stylesheet" href ="screen.css" />
+  <link rel="stylesheet" href="screen.css" />
+</head>
 <body>
   <header id="header">
     <h1><a href="http://example.com/index.html" rel="home">HTML Antipatterns</a></h1>
-
     <nav id="navigation">
       <ul>
         <li><a href="home.html">Home</a></li>
@@ -19,18 +19,15 @@
       </ul>
     </nav>
   </header>
-  <!--Hint: Watch for duplicate and non-semantic classes and IDs-->
   <main id="content">
     <article id="primary" class="green-background">
       <h2><b>About Me</b></h2>
       <h3><i>3rd-Year ITM Undergraduate</i></h3>
       <h4>Majoring in Cybersecurity</h4><br />
-      <!--Hint: Hard-wrap lines of text longer than 80–100 characters-->
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       </p>
     </article>
-    <!--Hint: Watch formatting, spacing, and tag completeness-->
     <article id="mydog">
       <h2 class="header">Look at this awesome dog!</h2>
         <figure>
@@ -40,13 +37,15 @@
             </figcaption>
         </figure>
     </article>
-    <aside id="supporting">
-    <p><h2>Facts About Me</h2></p>
-    <!--Hint: Don't repeat classes on all inner elements that share a common parent-->
-    <ul class="quick-facts">
-          <li><p><b> Quick Facts:</b></p>
-          <li>Interested in cybersecurity</li>
-          <li>Hate cold winters</li>
-          <li>Always running late</li>
-    </ul>
+      <aside id="supporting">
+        <h2>Facts About Me</h2>
+          <ul class="quick-facts">
+            <li><p><b>Quick Facts:</b></p>
+            <li>Interested in cybersecurity</li>
+            <li>Hate cold winters</li>
+            <li>Always running late</li>
+          </ul>
+      </aside>
+</main>
+</body>
 </html>
