Fix line wrapping and change & symbol

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -23,9 +23,12 @@
     <article id="primary" class="green-background">
       <h2><b>About Me</b></h2>
       <h3><i>3rd-Year ITM Undergraduate</i></h3>
-      <h4>Majoring in Cybersecurity</h4><br />
+      <h4>Majoring in Cybersecurity</h4>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis, pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna
+suscipit, in blandit mauris aliquam. Donec ac elementum libero. Maecenas sit amet leo iaculis,
+pulvinar magna non, tristique justo. Sed iaculis odio nec suscipit malesuada. Lorem ipsum dolor sit
+amet, consectetur adipiscing elit.
       </p>
     </article>
     <article id="mydog">
@@ -33,7 +36,7 @@
         <figure>
           <img src="file:///Users/scarlethawk/Desktop/Photo%20Saves/Hank.JPEG" alt="Photo of Hank" />
             <figcaption>
-              Hank hanging out on the couch & being chill.
+              Hank hanging out on the couch &amp; being chill.
             </figcaption>
         </figure>
     </article>
