no errors in valitor or htmllint for index.html file

--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -43,7 +43,7 @@ amet, consectetur adipiscing elit.
       <aside id="supporting">
         <h2>Facts About Me</h2>
           <ul class="quick-facts">
-            <li><p><b>Quick Facts:</b></p>
+            <li><p><b>Quick Facts:</b></p></li>
             <li>Interested in cybersecurity</li>
             <li>Hate cold winters</li>
             <li>Always running late</li>
