--- a/pp-02/index.html
+++ b/pp-02/index.html
@@ -21,8 +21,8 @@
   </header>
   <main id="content">
     <article id="primary" class="green-background">
-      <h2><b>About Me</b></h2>
-      <h3><i>3rd-Year ITM Undergraduate</i></h3>
+      <h2>About Me</h2>
+      <h3>3rd-Year ITM Undergraduate</h3>
       <h4>Majoring in Cybersecurity</h4>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper risus eget magna
